Thoughts on GasToken leveraged by Arbitrage for Font-running + add refs

--- a/stable-coin-paper/bib/stablecoinRef.bib
+++ b/stable-coin-paper/bib/stablecoinRef.bib
@@ -162,3 +162,13 @@
 	Title = {Black Swan},
 	Howpublished = {\url{ https://www.investopedia.com/terms/b/blackswan.asp	}},
     Year = {2008}}
+    
+@book{harris2003trading,
+  title={Trading and exchanges: Market microstructure for practitioners},
+  author={Harris, Larry},
+  pages={410--419},
+  year={2003},
+  publisher={Oxford University Press, USA}
+  
+  
+}
