--- a/stable-coin-paper/setup/table.tex
+++ b/stable-coin-paper/setup/table.tex
@@ -52,10 +52,10 @@
                                                                                                                  
 \multirow{5}{*}{Intervention}                                                           
 						& \multirow{1}{*}{Market} 										& Nubits & 892 \\ \cline{2-4}
-						& \multirow{1}{*}{Algorithmic with subjective external information}  		& Nomin* & $\perp$  \\ \cline{2-4}
+						& \multirow{1}{*}{Algorithmic with subjective external information}  		& Nomin (nUSD)* & $\perp$  \\ \cline{2-4}
 						& \multirow{2}{*}{Algorithmic with objective external information}  		& CarbonUSD* & 1262 \\ \cline{3-4}
 						&														& Ampleforth* & $\perp$ \\ \cline{2-4}
-						& \multirow{1}{*}{Algorithmic with only internal information} 			& Basis & $\perp$ \\ \hline
+						& \multirow{1}{*}{Algorithmic with only internal information} 			& Basecoin & $\perp$ \\ \hline
 
 \end{tabular}
 \vspace{1em}
