Plot captions, fig1 plotted with axes labels

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -47,7 +47,7 @@ Having said that, the volatile nature of cryptocurrencies (\eg Ether, Bitcoin) h
 	\subfloat[GBP with respect to EUR and USD]{\includegraphics[width=0.75\textwidth]{figures/gbpBrexit.pdf}\label{fig:btc}}
 	\hfill
 	\subfloat[Legend]{\includegraphics[width=0.25\textwidth]{figures/compass}\label{fig:legend}}
-	\caption{BTC}
+	\caption{Brexit's effect on GBP}
 	\label{fig:Comparison}
 \end{figure}
 %========================%
@@ -55,13 +55,11 @@ Having said that, the volatile nature of cryptocurrencies (\eg Ether, Bitcoin) h
 %Figure1: It shows how extreme the volatility of BTC is, when compared to fiat currencies. 
 % Prices retireved daily between 2016.01.01 and 2019.01.01
 %EUR,CAD and GBP show stable behaviour.
-%After June 23, 2016 (when the referendum for withdrawal of UK from EU 
-%took place), it can be observed that GBP and EUR values start to come closer as GBP loses and EUR gains value compared to USD. This is how volatility looks like in
-%fiat currencies. Even such an important event with economical impacts didn't cause a high volatility compared to BTC price which exhibits more extreme changes in its value.
+%After June 23, 2016 (when the referendum for withdrawal of UK from EU took place), it can be observed that GBP and EUR values start to come closer as GBP loses and EUR gains value compared to USD. This is how volatility looks like in fiat currencies. Even such an important event with economical impacts didn't cause a high volatility compared to BTC price which exhibits more extreme changes in its value.
 
 %Figure 2 illustrates GBP's behavior against EUR and USD. GBP plot moves in the 2-6 direction and there is a price drop of approximately 24 cents
 %over a five month period following the referendum for Brexit. 
-%Figure 2 zooms into the changes that GBP exhibits over time, as it is plotted over a small interval to reflect the price changes. 
+%Figure 2 zooms into the changes that GBP exhibits over time, as it is plotted over a small interval to reflect the price changes. Here Brexit's effect can be seen in more detail.
 %Compared to Figure 1, the price drop is more visible, but it is worth noting that the price change is small compared to the changes in the value of BTC. NOTE: about terminology: price or vaue? or something different?
 %GBP -(EUR and USD) chart "The pound dropped to its lowest level against the euro in 2017 after Mario Draghi, head of the European Central Bank, pushed the eurozone currency higher by saying he could start tightening monetary policy." September 2017 GBP loses value against both USD end EUR.
 
@@ -377,7 +375,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\subfloat[ETH]{\includegraphics[width=0.45\textwidth]{figures/eth.pdf}\label{fig:cad}}
 	\hfill
 	\subfloat[XRP]{\includegraphics[width=0.45\textwidth]{figures/xrp.pdf}\label{fig:eur}}
-	\caption{CAPTION}
+	\caption{Volatility in cryptocurrencies}
 	\label{fig:fiatandcrypto}
 \end{figure}
 
@@ -393,7 +391,7 @@ Compared to Figure~\ref{fig:eur} and Figure~\ref{fig:eth}, gas plot (Figure~\ref
 	\subfloat[Tether]{\includegraphics[width=0.45\textwidth]{figures/tether.pdf}\label{fig:tether}}
 	\hfill
 	\subfloat[BitUSD]{\includegraphics[width=0.45\textwidth]{figures/bitusd.pdf}\label{fig:bitusd}}
-	\caption{CAPTION}
+	\caption{Stability in fiat currencies and stablecoins }
 	\label{fig:fiatandcrypto}
 \end{figure}
 %========================%
