Notes on currency board

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -187,6 +187,15 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Justification that offers will be less than $1
 % Examples:
 
+%=================% 
+%IMF's papers on currency boards(https://www.imf.org/external/pubs/ft/pdp/2000/pdp01.pdf):one of the elements in a currency board: fixed exchange rate pegged to a foreign anchor 
+%aim: monetary stability and low inflation
+%currency board needs sufficient backing of base money (=central bank holds sufficient foreign exchange reserve)
+%CBA has adjustment mechanism. It reacts automatically to the changes in the foreign exchange outflows and inflows.Interest rates adjust automatically in currency board based systems
+%problem when the domestic inflation rate is higher than the inflation rate of the underlying foreign currency: results in overvaluation of the domestic currency
+
+%(https://www.imf.org/external/pubs/ft/wp/wp9808.pdf): Difference between currency board and pegged exchange rate
+%=================% 
 \subsection{Algorithmic with subjective external information}
 % Description of how it works.
 % Justification that bids will never exceed $1
