Realted work section to be filled

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -70,9 +70,32 @@ Also, the fact that the plot is located on the diagonal shows that Bitcoin gains
 Considering these facts, there is a desire to design stablecoins with the stable nature of the fiat currencies together with the decentralized nature of the blockchain which is the underlying technology of cryptocurrencies.
 
 %==========================================%
-
 \section{Preliminaries}
 
+\section{Related Works}
+%Mahsa:
+
+
+
+
+
+%==========================================%
+%Didem:
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+%==========================================%
 \subsection{Valuation}
 % Every thing has two prices
 
