Related works added

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -75,8 +75,45 @@ Considering these facts, there is a desire to design stablecoins with the stable
 \section{Related Works}
 %Mahsa:
 
-
-
+%In 2018, Bitmax published a report in which they briefly discuss the two types of stablecoin (\ie BitShares (BitUSD) and MakerDAO (Dai)) and provided a comparison in terms of different design decisions they apply~\cite{Bitmex}. 
+%The idea seigniorage shares was first introduced by Robert Sams in 2017, where he proposed a new dual token system that uses two coins to achieve price stability: (i) a stablecoin (\eg fiat currency) and (ii) a volatile coin (\eg equity shares)~\cite{sams2015note}. 
+%In "The Denationalization of Money, F. A. Hayek, the Nobel Prize-winning economist, discussed about government authority over money supply. He argued that money should not be supplied by governments and instead, it should be market driven and based on market's supply and demand~\cite{F. A. Hayek}.
+%In 2016, Ametrano introduced "Hayek Money", a new monetary policy of elastic non-discretionary supply that can be used to achieve a price stable cryptocurrency~\cite{ametrano2016hayek}.
+%In one of his blog post, Buterin has discussed .... (https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/) ~\cite{TheSearc7:online}
+%
+%Should we talk about the followings:
+% https://static1.squarespace.com/static/55f73743e4b051cfcc0b02cf/t/58c7f80c2e69cf24220d335e/1489500174018/R3+Report-+Fedcoin.pdf ?
+% http://hardjono.mit.edu/sites/default/files/documents/Digital-Trade-Coin.pdf
+%
+%@article{sams2015note,
+%  title={A Note on Cryptocurrency Stabilisation: Seigniorage Shares},
+%  author={Sams, Robert},
+%  journal={Brave New Coin},
+%  pages={1--8},
+%  year={2015}
+%}
+%
+%@book{F. A. Hayek,
+%  title={The Denationalization of Money},
+%  author={Friedrich Hayek},
+%  pages={},
+%  year={1978},
+%  publisher={Institute of Economic Affairs}
+%}
+%
+%@article{ametrano2016hayek,
+%  title={Hayek money: The cryptocurrency price stability solution},
+%  author={Ametrano, Ferdinando M},
+%  year={2016}
+%}
+%@misc{TheSearc7:online,
+%author = {Vitalik Buterin},
+%title = {The Search for a Stable Cryptocurrency},
+%howpublished = {\url{https://blog.ethereum.org/2014/11/11/search-stable-cryptocurrency/}},
+%month = {November4},
+%year = {2014},
+%note = {(Accessed on 02/11/2019)}
+%}
 
 
 %==========================================%
