--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -81,18 +81,25 @@ Considering these facts, there is a desire to design stablecoins with the stable
 
 %==========================================%
 %Didem:
+%Bitmex provides a classification for the stablecoins based on the fact whether there is an underlying collateral or not~\cite{bitmex}. They focus on the distributed stablecoins. We take centralized projects into consideration too. 
 
+%The report from Blockchain provides an extensive classification of 57 stablecoins ~\cite{report}. Besides grouping them according to the mechanism that provides stability, they also provide information about the issues related to governance like legal structure, investors, partners etc.
 
+%Consensys also provides a classification base on the same framework.(https://media.consensys.net/the-state-of-stablecoins-2018-79ccb9988e63). They have a discussion decentralization too. 
 
+%In~\cite{cryptoinsider}, the chosen projects are analyzed under two broad categories: centralized an decentralized. Centralized ones are further grouped into different categories according to the type of asset that is used to back the stablecoins.
 
+%~\cite{hackernoon},~\cite{comprehensiveOverview},~\cite{linkedin},~\cite{coinsexplained} and ~\cite{overview} categorize the stablecoins under three categories: fiat-collateralized, crypto-collateralized and non-collateralized.
 
+%(http://www.andrew.cmu.edu/user/azj/research/rzj_slides201808.pdf): three categories: 100\% USD Reserve backed coins, Protocol coins without redemption, Protocol coins with redemption in floating-rate crypto-currencies
 
+%(https://icosbull.com/whitepapers/2265/USDX_Protocol_whitepaper.pdf) three generations of stablecoins: Collateral-backed IOU, Collateral-backed on blockchain, Elastic monetary supply based. (This is a whitepaper for a protocol but it has a different classification)
 
+%Compared to aforementioned works that provide a systemization of the stablecoins, we provide a different framework to classify the existing mechanisms to achieve stability. While most of the works divide stablecoins into three categories (fiat-collateralized, crypto-collateralized and non-collaterlized), we divide them into two broad categories as backed and intervention. Then, we further group them under different mechanisms.
 
+%(https://multicoin.capital/2018/01/17/an-overview-of-stablecoins/)  Stablecoins are discussed under three main categories as centralized IOU issuance, collateral backed, and seigniorage shares along with the discussion of different types of oracles and the challenges that stablecoins face.
 
-
-
-
+%How we chose the projects: We performed a search query on \texttt{coindesk.com} and classified the projects that are mentioned in the posts until January 11, 2019. \footnote{https://www.coindesk.com/} (Copied the same text here!)
 
 
 %==========================================%
@@ -171,7 +178,7 @@ If Alice goes to Peter Luger's in Brooklyn, consumes a \$100 ribeye, and mints a
 % Risk: not redeemable -> redemption is not 100%, the coin will be offered at less than $1. E.g., offers of $0.50, says 50% it can't be redeemed.
 % Examples: Gemini
 % Mahsa: Should we talk about these two recent incidents in this section?
-% According to the recent blogpost in coindesk (https://www.coindesk.com/winklevoss-crypto-gemini-gusd-stablecoin-redemption) Gemini has closed the account of some users and in some cases do not let redemption (some KYC issues) +     Paxos has has the same issue, although they let the user redeem their assets and then closed their account (https://www.ccn.com/paxos-standard-hassling-ethereum-traders-trying-to-redeem-stablecoin-pax-for-dollars)
+% According to the recent blogpost in  (https://www.coindesk.com/winklevoss-crypto-gemini-gusd-stablecoin-redemption) Gemini has closed the account of some users and in some cases do not let redemption (some KYC issues) +     Paxos has has the same issue, although they let the user redeem their assets and then closed their account (https://www.ccn.com/paxos-standard-hassling-ethereum-traders-trying-to-redeem-stablecoin-pax-for-dollars)
 
 
 \subsection{Non-Redeemable and Directly-Backed.}
